fix vcard truncation and escaping

--- a/view/theme/redbasic/css/style.css
+++ b/view/theme/redbasic/css/style.css
@@ -836,8 +836,6 @@ aside li {
 	float: left;
 	display: block;
 	width: 130px;
-	height: 18px;
-	overflow: hidden;
 }
 
 .profile-clear {
